fix: 파일 다운로드 시 JSON 응답 오류 및 한글 파일명 깨짐 해결